--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,13 +58,9 @@ nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
   transition: 0.4s;
 }
 
-div#message #messageAlert {
-  padding: 2em 1em;
-}
-
 div.hero-container {
   padding: 8em 2em;
-  background: url(/img/hero-bg.svg);
+  background: url(/assets/img/hero-bg.svg);
   height: 70vh;
   min-width: 100%;
   background-repeat: no-repeat;
@@ -118,7 +114,7 @@ div.info-container p {
 }
 
 div.search-container {
-  background: url(/img/bg-search-mob.svg);
+  background: url(/assets/img/bg-search-mob.svg);
   height: 24vh;
   min-width: 100%;
   background-repeat: no-repeat;
@@ -208,8 +204,14 @@ div.item-container div.item-container div.card img {
   justify-content: center;
   width: 30%;
 }
-div.item-container div.item-container div.card div.card-body {
-  text-align: center;
+div.item-container div.item-container div.card h5 {
+  font-size: 14px;
+}
+div.item-container div.item-container div.card p {
+  font-size: 12px;
+}
+div.item-container div.item-container div.card a {
+  font-size: 12px;
 }
 
 div.pagination-container {
@@ -259,16 +261,24 @@ div.about-container div.about-socials {
     justify-content: center;
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     padding: 0 2em;
+  }
+  div.item-container div.card {
+    margin: auto;
   }
   div.swiper div.swiper-wrapper div.swiper-slide img {
     width: 40%;
   }
 }
 @media screen and (min-width: 768px) {
-  div#message #messageAlert {
-    padding: 2em 2em;
+  nav div.logo h1 {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  nav div.logo span.ent {
+    font-size: 18px;
+    letter-spacing: 5px;
   }
   div.hero-container {
     width: 100%;
@@ -372,9 +382,6 @@ div.about-container div.about-socials {
     font-size: 20px;
     margin-left: 2em;
   }
-  div#message #messageAlert {
-    padding: 0 1em;
-  }
   div.hero-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -438,9 +445,6 @@ div.about-container div.about-socials {
   nav {
     padding: 0 5em;
   }
-  div#message #messageAlert {
-    padding: 2em 5em;
-  }
   div.hero-container {
     padding: 4em 5em;
     display: flex;
@@ -500,7 +504,7 @@ div.about-container div.about-socials {
 }
 @media screen and (min-width: 1280px) {
   nav div.collapse ul li.nav-item a.nav-link {
-    font-size: 18px;
+    font-size: 20px;
   }
   div.hero-container {
     padding-top: 4em;
@@ -536,11 +540,8 @@ div.about-container div.about-socials {
   }
 }
 @media screen and (min-width: 1390px) {
-  nav {
+  nav div.container-fluid {
     padding: 0 12em;
-  }
-  div#message #messageAlert {
-    padding: 2em 12em;
   }
   div.hero-container {
     padding-top: 4em;
@@ -586,4 +587,4 @@ div.about-container div.about-socials {
   div.about-container div.about-text p {
     padding: 0 12em;
   }
-}/*# sourceMappingURL=home.css.map */
+}/*# sourceMappingURL=index.css.map */
