--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -80,16 +80,10 @@ nav{
     }
 }
 
-div#message{
-  #messageAlert{
-    padding: 2em 1em;
-  }
-}
-
 //HERO SECTION
 div.hero-container{
     padding: 8em 2em;
-    background: url(/img/hero-bg.svg);
+    background: url(/assets/img/hero-bg.svg);
     height: 70vh;
     min-width:100%;
     background-repeat: no-repeat;
@@ -151,7 +145,7 @@ div.info-container{
 
 //SEARCH BAR
 div.search-container{
-  background: url(/img/bg-search-mob.svg);
+  background: url(/assets/img/bg-search-mob.svg);
   height: 24vh;
   min-width:100%;
   background-repeat: no-repeat;
@@ -244,16 +238,20 @@ div.item-container{
             margin: 0;
               padding-top: 3em;
               margin-bottom: 4em;
-            
               img{
                   margin: auto;
                   display: flex;
                   justify-content: center;
                   width: 30%;
               }
-
-              div.card-body{
-                  text-align: center;
+              h5{
+                  font-size: 14px;
+              }
+              p{
+                  font-size: 12px;
+              }
+              a{
+                  font-size: 12px;
               }
           }
       }
@@ -317,9 +315,12 @@ div.about-container{
       justify-content: center;
       align-items: center;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       padding: 0 2em;
 
+      div.card{
+        margin: auto;
+      }
     }
 
     // SWIPER
@@ -338,10 +339,17 @@ div.about-container{
 // TABLET VIEW 768
 @media screen and (min-width: 768px){
     //NAVIGATION SECTION
-    div#message{
-      #messageAlert{
-        padding: 2em 2em;
-      }
+    nav{
+        div.logo{
+        h1{
+            font-size: 20px;
+            font-weight: bold;
+        }
+        span.ent{
+            font-size: 18px;
+            letter-spacing: 5px;
+        }
+        }
     }
 
     //HERO SECTION
@@ -511,12 +519,6 @@ nav{
          }
        }
 
-       div#message{
-        #messageAlert{
-          padding: 0 1em;
-        }
-      }
-
        //HERO CONTENT
        div.hero-container{
         display: grid;
@@ -594,12 +596,6 @@ nav{
 //Navigation
 nav{
     padding: 0 5em;
-}
-
-div#message{
-  #messageAlert{
-    padding: 2em 5em;
-  }
 }
 
 //HERO SECTION
@@ -692,17 +688,16 @@ div.hero-container{
 
 // DESKTOP VIEW 1280
 @media screen and (min-width: 1280px){
-  //NAVIGATION
-  nav{
+//NAVIGATION
+nav{
     div.collapse ul{
         li.nav-item{
             a.nav-link{
-                font-size: 18px;
+                font-size: 20px;
             }
         }
     }
 }
-
 
     //HERO SECTION
     div.hero-container{
@@ -763,20 +758,9 @@ div.hero-container{
 @media screen and (min-width: 1390px){
     // NAVIGATION
     nav{
-        padding: 0 12em;
-        // ul{
-        //     li.nav-item{
-        //         i{
-        //             font-size: 24px;
-        //         }
-        //     }
-        // }
-    }
-
-    div#message{
-      #messageAlert{
-        padding: 2em 12em;
-      }
+        div.container-fluid{
+            padding: 0 12em;
+          }
     }
     //HERO SECTION
     div.hero-container{
