--- a/assets/css/signin.scss
+++ b/assets/css/signin.scss
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
+//NAVIGATION SECTION
 nav{
     box-shadow: -1px 6px 59px -35px rgba(41,41,41,0.75);
     -webkit-box-shadow: -1px 6px 59px -35px rgba(41,41,41,0.75);
@@ -51,34 +46,59 @@ nav{
                 color: color(bg-orange);
                 transition: 0.4s;
             }
-          }
+           }
         }
+  
     }
   }
   
   div.main-container{
-    div.form-container{
-      padding: 0 1em;
-      div.tabimg-container{
+    background: #FFFFFF;
+    height: 100%;
+  }
+  
+  div.form-container{
+    padding: 2em 1em;
+  
+    div.left-content{
+      img{
+        max-width: 400px;
+        margin: auto;
+        display: block;
+        justify-content: center;
+        align-items: center;
+      }
+      div.hello-welcome{
         display: none;
       }
-      div.left-content{
-        padding-top: 3em;
+     
+      h1{
+        text-align: center;
+        font-weight: 700;
+        font-size: 28px;
       }
-      div.right-content{
-        h1{
+      p{
+        margin-top: 1em;
+        font-size: 18px;
+        padding: 0 2em;
+        text-align: center;
+      }
+    }
+  
+    div.right-content{
+      h1{
+        display: none;
+      }
+      p{
+        display: none;
+      }
+      form{
+        label{
+          font-size: 18px;
           font-weight: 700;
         }
-        p{
-          text-align: center;
-        }
-        form{
-          label{
-            font-weight: 700;
-          }
-         p{
-          margin-bottom: 3em;
-         }
+        input{
+          border-radius: 7px;
         }
       }
     }
@@ -115,71 +135,72 @@ nav{
            }
          }
   
-         div.main-container{
-          height: 100vh;
-          background: #DDDDDD;
-        }
-  
-        div.form-container{
-          margin-top: 3em;
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          div.left-content{
-         
-            border-radius: 17px 0 0 17px;
-            padding: 1em;
-            background: #E6E7E6;
-  
-            div.tabimg-container{
-              display: block;
-              img{
-                display: block;
-                margin: auto;
-                justify-content: center;
-                align-items: center;
-              }
-              h1{
-                text-align: center;
-                margin-top: 1em;
-                font-size: 20px;
-                font-weight: 700;
-              }
-              p{   
-                text-align: center;
-                font-size: 18px;
-              }
-          
-            }
-            div.sign-mob{
-              display: none;
-            }
-            img{
-              padding-top: 4em;
-            }
+    div.main-container{
+      background-image: linear-gradient(to right, #2882FF , #4160CB);
+      height: 100vh;
+    }
+    // nav{
+    //   padding: 0 3em;
+    // }
+    div.form-container{
+      height: 80vh;
+      padding: 5em 3em;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      div.left-content{
+        border-radius: 17px 0 0 17px;
+        padding: 1em;
+        background: #E6E7E6;
+        div.hello-welcome{
+          h1{
+            text-align: center;
+            margin-top: 1em;
+            font-size: 20px;
           }
-          div.right-content{
-            padding: 1em;
-            border-radius: 0 17px 17px 0;
-            background: #FFFFFF;
-            form{
-              padding: 0 1em;
-              label.userLabel{
-                margin-top: 3em;
-              }
-              h1{
-                display: none;
-              }
-              p{
-                display: none;
-              }
-            }
+          p{   
+            font-size: 18px;
+          }
+          display: block;
+        }
+        div.sign-mob{
+          display: none;
+        }
+        img{
+          padding-top: 4em;
+        }
+      }
+      div.right-content{
+        padding: 1em;
+        border-radius: 0 17px 17px 0;
+        background: #FFFFFF;
+        form{
+          padding: 0 1em;
+          h1{
+            margin-top: 1em;
+            font-size: 20px;
+            display: block;
+            font-weight: 700;
+          }
+          p{
+            font-size: 18px;
+            display: block;
           }
         }
+      }
+    }
   }
   
   @media screen and (min-width: 1200px){
     nav{
       padding: 0 5em;
+        div.collapse ul{
+            li.nav-item{
+                a.nav-link{
+                    font-size: 20px;
+                }
+            }
+        
+    }
     }
   
     div.main-container{
@@ -211,13 +232,14 @@ nav{
   
   @media screen and (min-width: 1490px){
     nav{
-      padding: 0 12em;
+      div.container-fluid{
+        padding: 0 12em;
+      }
     }
-  
     div.main-container{  
-      height: 100%;
+      height: 100vh;
       div.form-container{
-        padding: 1em 22em;
+        padding: 4em 22em;
         div.left-content{
           h1{
             margin-top: 2em;
@@ -232,6 +254,3 @@ nav{
       
     }
   }
-  
-  
-  
