--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 nav {
   box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
   -webkit-box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
@@ -39,47 +45,26 @@ nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
   transition: 0.4s;
 }
 
-div.main-container {
-  background: #FFFFFF;
-  height: 100%;
+div.main-container div.form-container {
+  padding: 0 1em;
 }
-
-div.form-container {
-  padding: 2em 1em;
-}
-div.form-container div.left-content img {
-  max-width: 400px;
-  margin: auto;
-  display: block;
-  justify-content: center;
-  align-items: center;
-}
-div.form-container div.left-content div.hello-welcome {
+div.main-container div.form-container div.tabimg-container {
   display: none;
 }
-div.form-container div.left-content h1 {
-  text-align: center;
-  font-weight: 700;
-  font-size: 28px;
+div.main-container div.form-container div.left-content {
+  padding-top: 3em;
 }
-div.form-container div.left-content p {
-  margin-top: 1em;
-  font-size: 18px;
-  padding: 0 2em;
-  text-align: center;
-}
-div.form-container div.right-content h1 {
-  display: none;
-}
-div.form-container div.right-content p {
-  display: none;
-}
-div.form-container div.right-content form label {
-  font-size: 18px;
+div.main-container div.form-container div.right-content h1 {
   font-weight: 700;
 }
-div.form-container div.right-content form input {
-  border-radius: 7px;
+div.main-container div.form-container div.right-content p {
+  text-align: center;
+}
+div.main-container div.form-container div.right-content form label {
+  font-weight: 700;
+}
+div.main-container div.form-container div.right-content form p {
+  margin-bottom: 3em;
 }
 
 @media screen and (min-width: 912px) {
@@ -105,12 +90,11 @@ div.form-container div.right-content form input {
     margin-left: 2em;
   }
   div.main-container {
-    background-image: linear-gradient(to right, #2882FF, #4160CB);
     height: 100vh;
+    background: #DDDDDD;
   }
   div.form-container {
-    height: 80vh;
-    padding: 5em 3em;
+    margin-top: 3em;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
@@ -119,15 +103,23 @@ div.form-container div.right-content form input {
     padding: 1em;
     background: #E6E7E6;
   }
-  div.form-container div.left-content div.hello-welcome {
+  div.form-container div.left-content div.tabimg-container {
     display: block;
   }
-  div.form-container div.left-content div.hello-welcome h1 {
+  div.form-container div.left-content div.tabimg-container img {
+    display: block;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  div.form-container div.left-content div.tabimg-container h1 {
     text-align: center;
     margin-top: 1em;
     font-size: 20px;
+    font-weight: 700;
   }
-  div.form-container div.left-content div.hello-welcome p {
+  div.form-container div.left-content div.tabimg-container p {
+    text-align: center;
     font-size: 18px;
   }
   div.form-container div.left-content div.sign-mob {
@@ -144,20 +136,22 @@ div.form-container div.right-content form input {
   div.form-container div.right-content form {
     padding: 0 1em;
   }
+  div.form-container div.right-content form label.userLabel {
+    margin-top: 3em;
+  }
   div.form-container div.right-content form h1 {
-    margin-top: 1em;
-    font-size: 20px;
-    display: block;
-    font-weight: 700;
+    display: none;
   }
   div.form-container div.right-content form p {
-    font-size: 18px;
-    display: block;
+    display: none;
   }
 }
 @media screen and (min-width: 1200px) {
   nav {
     padding: 0 5em;
+  }
+  nav div.collapse ul li.nav-item a.nav-link {
+    font-size: 20px;
   }
   div.main-container div.form-container {
     padding: 5em 6em;
@@ -170,7 +164,7 @@ div.form-container div.right-content form input {
   }
 }
 @media screen and (min-width: 1390px) {
-  nav {
+  nav div.container-fluid {
     padding: 0 12em;
   }
   div.main-container {
@@ -185,10 +179,10 @@ div.form-container div.right-content form input {
     padding: 0 12em;
   }
   div.main-container {
-    height: 100vh;
+    height: 100%;
   }
   div.main-container div.form-container {
-    padding: 4em 22em;
+    padding: 1em 22em;
   }
   div.main-container div.form-container div.left-content h1 {
     margin-top: 2em;
@@ -196,4 +190,4 @@ div.form-container div.right-content form input {
   div.main-container div.form-container div.right-content h1 {
     margin-top: 2.2em;
   }
-}/*# sourceMappingURL=signin.css.map */
+}/*# sourceMappingURL=signup.css.map */
