--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -542,6 +542,9 @@ nav{
                 display: flex;
                 left: 0;
                 float: left;
+                a#btn-shopnow{
+                    margin: 0;
+                }
             }
            
         }
