--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,6 +58,10 @@ nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
   transition: 0.4s;
 }
 
+div#message #messageAlert {
+  padding: 2em 1em;
+}
+
 div.hero-container {
   padding: 8em 2em;
   background: url(/assets/img/hero-bg.svg);
@@ -86,7 +90,6 @@ div.hero-container div.left-content div.text-content p {
 div.hero-container div.left-content a#btn-shopnow {
   border-radius: 2px;
   padding: 1em 1em;
-  margin: auto;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -204,14 +207,8 @@ div.item-container div.item-container div.card img {
   justify-content: center;
   width: 30%;
 }
-div.item-container div.item-container div.card h5 {
-  font-size: 14px;
-}
-div.item-container div.item-container div.card p {
-  font-size: 12px;
-}
-div.item-container div.item-container div.card a {
-  font-size: 12px;
+div.item-container div.item-container div.card div.card-body {
+  text-align: center;
 }
 
 div.pagination-container {
@@ -261,28 +258,19 @@ div.about-container div.about-socials {
     justify-content: center;
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     padding: 0 2em;
-  }
-  div.item-container div.card {
-    margin: auto;
   }
   div.swiper div.swiper-wrapper div.swiper-slide img {
     width: 40%;
   }
 }
 @media screen and (min-width: 768px) {
-  nav div.logo h1 {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  nav div.logo span.ent {
-    font-size: 18px;
-    letter-spacing: 5px;
+  div#message #messageAlert {
+    padding: 2em 2em;
   }
   div.hero-container {
     width: 100%;
-    margin: 0 auto;
     justify-content: center;
     align-items: center;
   }
@@ -382,6 +370,9 @@ div.about-container div.about-socials {
     font-size: 20px;
     margin-left: 2em;
   }
+  div#message #messageAlert {
+    padding: 0 1em;
+  }
   div.hero-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -404,7 +395,7 @@ div.about-container div.about-socials {
   }
   div.hero-container div.left-content div.col.text-center {
     display: flex;
-    left: 0;
+    justify-content: flex-start;
     float: left;
   }
   div.hero-container div.left-content div.col.text-center a#btn-shopnow {
@@ -447,6 +438,9 @@ div.about-container div.about-socials {
 @media screen and (min-width: 1200px) {
   nav {
     padding: 0 5em;
+  }
+  div#message #messageAlert {
+    padding: 2em 5em;
   }
   div.hero-container {
     padding: 4em 5em;
@@ -545,6 +539,9 @@ div.about-container div.about-socials {
 @media screen and (min-width: 1390px) {
   nav div.container-fluid {
     padding: 0 12em;
+  }
+  div#message #messageAlert {
+    padding: 2em 12em;
   }
   div.hero-container {
     padding-top: 4em;
