--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -7,7 +7,7 @@
 }
 
 div.main-container {
-  background: #FFFFFF;
+  background: #F2F2F2;
   font-family: "Poppins", sans-serif;
 }
 
@@ -21,73 +21,95 @@ nav {
   -moz-box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
   padding: 0 1em;
 }
-nav div.logo h1 {
-  font-size: 16px;
-  font-weight: bold;
+nav a.navbar-brand {
+  width: 50%;
 }
-nav div.logo span.ent {
-  font-size: 12px;
-  letter-spacing: 5px;
+nav a.navbar-brand img {
+  max-width: 176px;
+}
+nav ul li.nav-item {
+  text-align: center;
+  padding-top: 0.2em;
+  margin-bottom: 0.7em;
 }
 nav ul li.nav-item a {
   color: #212529;
   text-decoration: none;
   list-style: none;
 }
-nav ul li.nav-item ul {
-  list-style: none;
-}
 nav div.collapse ul.navbar-nav li.nav-item a.home:hover {
-  color: #FF432A;
+  color: color(bg-orange);
   transition: 0.4s;
 }
 nav div.collapse ul.navbar-nav li.nav-item a.shop:hover {
-  color: #FF432A;
+  color: color(bg-orange);
   transition: 0.4s;
 }
 nav div.collapse ul.navbar-nav li.nav-item a.about:hover {
-  color: #FF432A;
+  color: color(bg-orange);
   transition: 0.4s;
 }
 nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
-  color: #FF432A;
+  color: color(bg-orange);
   transition: 0.4s;
 }
 
 div.main-container {
-  padding: 4em 1em;
+  padding: 5em 1em;
 }
-div.main-container h1.profileInfo {
+div.main-container div.head-container {
+  padding: 1.7em;
+  background: #4656F5;
   text-align: center;
-  margin-bottom: 4em;
-  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
-div.main-container div.profname-container {
+div.main-container div.head-container h1 {
+  font-size: 22px;
+  font-weight: 400px;
+}
+div.main-container div.head-container p {
+  font-size: 14px;
+}
+div.main-container div.information-container {
+  padding: 4em;
+  align-items: center;
   text-align: center;
-  margin-bottom: 4em;
 }
-div.main-container div.profile-container form {
-  font-size: 16px;
+div.main-container div.information-container h1 {
+  font-weight: 600;
 }
-div.main-container form div.detail-container h2 {
-  font-size: 20px;
+div.main-container div.information-container p {
+  align-items: center;
+  text-align: center;
+  font-size: 14px;
 }
-div.main-container form button {
-  padding: 0.6em;
+div.main-container div.form-container {
+  margin-bottom: 7em;
+}
+div.main-container div.form-container div.card {
+  background: #F2F2F2;
+  margin-bottom: 2.4em;
+  border: #adb5bd 1px solid;
+  border-radius: 7px;
+}
+div.main-container div.form-container div.card p {
+  color: #535353;
+}
+div.main-container div.form-container div.card input {
+  background: #D9D9D9;
+}
+div.main-container div.form-container button {
+  display: block;
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  nav div.logo h1 {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  nav div.logo span.ent {
-    font-size: 18px;
-    letter-spacing: 5px;
-  }
-  div.profile-container form {
-    padding: 0 6em;
+  div.form-container form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
   }
 }
 @media screen and (min-width: 992px) {
@@ -95,34 +117,90 @@ div.main-container form button {
     padding: 0 1em;
     align-items: center;
   }
+  nav a.navbar-brand {
+    width: 0;
+  }
   nav ul.navbar-nav li.nav-item {
     text-align: center;
     align-items: center;
+  }
+  nav ul.navbar-nav i {
+    font-size: 26px;
+  }
+  nav div.collapse ul.navbar-nav {
+    margin-left: auto;
   }
   nav div.collapse ul.navbar-nav li.nav-item a {
     font-size: 20px;
     margin-left: 2em;
   }
-  div.profile-container form {
-    padding: 0 10em;
+  div.form-container {
+    padding: 0 1em;
+  }
+  div.form-container form div.card {
+    padding: 1.2em;
+  }
+  div.form-container form button {
+    padding: 0.8em;
   }
 }
 @media screen and (min-width: 1200px) {
-  nav {
+  nav div.container-fluid {
     padding: 0 5em;
   }
-  div.profile-container form {
-    padding: 0 20%;
+  div.main-container {
+    padding: 5em 5em;
+  }
+  div.main-container div.head-container h1 {
+    font-size: 26px;
+  }
+  div.main-container div.head-container p {
+    font-size: 16px;
+  }
+  div.main-container div.form-container {
+    padding: 0 5em;
+  }
+  div.main-container div.form-container form div.card {
+    padding: 1.8em;
+  }
+  div.main-container div.form-container form div.card h1 {
+    font-size: 24px;
+  }
+  div.main-container div.form-container form div.card p {
+    font-size: 16px;
+  }
+  div.main-container div.form-container form button {
+    width: 50%;
   }
 }
 @media screen and (min-width: 1280px) {
-  nav a.navbar-brand h1 {
-    font-size: 22px;
-  }
-  nav a.navbar-brand span.ent {
+  nav div.collapse ul li.nav-item a.nav-link {
     font-size: 20px;
   }
-  nav div.collapse ul li.nav-item a.nav-link {
-    font-size: 18px;
+}
+@media screen and (min-width: 1390px) {
+  nav div.container-fluid {
+    padding: 0 12em;
+  }
+  div.main-container {
+    padding: 5em 12em;
+  }
+  div.main-container div.head-container h1 {
+    font-size: 26px;
+  }
+  div.main-container div.head-container p {
+    font-size: 16px;
+  }
+  div.main-container div.form-container {
+    padding: 0 4em;
+  }
+  div.main-container div.form-container form div.card {
+    padding: 1.8em;
+  }
+  div.main-container div.form-container form div.card h1 {
+    font-size: 24px;
+  }
+  div.main-container div.form-container form div.card p {
+    font-size: 16px;
   }
 }/*# sourceMappingURL=profile.css.map */
